# isolation-tracker

./: .gitmodules  netlify.toml
auth-lambda/: Cargo.toml
auth-server/lib/: Server.re  dune
frontend/: .gitignore  bsconfig.json  package-lock.json  package.json
frontend/src/: Config.re  Index.re
frontend/src/App/: App.re  FBLogin.re
frontend/src/bindings/: Hello.re
hasura/: docker-compose.yml
hasura/migrations/1585486643212_create_table_public_users/: up.yaml
hasura/migrations/1585486805885_create_remote_schema_auth-server/: down.yaml  up.yaml
hasura/migrations/1585553708429_alter_table_public_users_add_column_facebook_id/: down.yaml  up.yaml
hasura/migrations/1585553736708_update_permission_auth-server_public_table_users/: up.yaml
hasura/migrations/1585553744225_update_permission_auth-server_public_table_users/: down.yaml  up.yaml
hasura/migrations/1585553749851_update_permission_auth-server_public_table_users/: up.yaml
hasura/migrations/1585553755171_update_permission_auth-server_public_table_users/: down.yaml  up.yaml
hasura/migrations/1585553840047_update_permission_user_public_table_users/: up.yaml
hasura/migrations/1586459644294_create_action_actionName/: up.yaml
hasura/migrations/1586459935072_create_action_loginWithFB/: down.yaml  up.yaml
hasura/migrations/1586460073489_modify_action_loginWithFB_to_loginWithFB/: down.yaml  up.yaml
rust-graphql-authoriser/: .gitignore  Cargo.toml  build-lambda.sh
simple-auth/: Cargo.toml
simple-auth/src/: main.rs
terraform/: .gitignore  lambda.tf  main.tf  variables.tf
(+6 files in other folders)
