[package]
name = "rust-graphql-authoriser"
version = "0.1.0"
authors = ["Anis Jonischkeit <anis.jonischkeit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"

serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"

reqwest = { version = "0.10.4", features = ["blocking", "json"] }
url = "^2.1.1"
jsonwebtoken = "^7.1.0"


